#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-62
2018-12-04 Mikhail S. Dubrovin
- apply gated algorithm to pedestals, add rms and status, save charge injected gains per panel
#	modified:   src/UtilsEpix10kaCalib.py
#	modified:   app/epix10ka_deploy_constants
#	modified:   app/epix10ka_pedestals_calibration
#	modified:   examples/ex_rayonix_config_pars.py

Committed w/o tag
2018-11-30 Mikhail S. Dubrovin
- src/UtilsEpix10kaCalib.py fix nrec -= 1 at the end of two cycles, invert GAIN_FACTOR_DEF

Tag: V01-00-61
2018-11-30 Mikhail S. Dubrovin
- fix multiple issues for intensity calibration of epix10ka2m
  - fix log on start record crash for missing SIT_RELEASE
  - in epix10ka_deploy_constants extend -t parameter for run number
  - use default gain factors 1/3/100 H/M/L gain modes, respectively
  - cosmetic improvements of output in debug mode
	modified:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_offset_calibration
	modified:   app/epix10ka_pedestals_calibration
	modified:   doc/ChangeLog
	modified:   src/UtilsEpix.py
	modified:   src/UtilsEpix10ka.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-60
2018-11-29 Mikhail S. Dubrovin
- fix multiple issues for intensity calibration of epix10ka2m
  - apply mask 0x3ff to raw at pedestals evaluation
  - return det.calib dtype=np.float32() it was dtype=object
  - return det.pedestals and det.gain shape = (7,16,352,384) was (112,352,384)
  - return det.coords_x shape = (16,352,384) was (1,4,4,352,384)
  - set directory mode to 0777, file mode 0666
  - fix numerous cosmetic issues
	modified:   examples/ex_new_dets.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	modified:   src/UtilsEpix.py